--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
   - "node"
-  - "lts/carbon"
-  - "lts/boron"
+  - "lts/erbium"
+  - "lts/dubnium"
 script: npm run test-coverage
